# vector-lib

./: CMakeLists.txt  main.cpp
include/: mat.h  mat22.h  vec.h  vec2.h  vector.h
src/: mat.cpp
